# compmicro-biautils-env

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  myst.yml  pixi.toml  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/reusable/install_and_test/: action.yml
.github/workflows/: deploy-gh-pages.yml  test.yml
docs/: development.md  docker.md  installation.md  intro.md  understanding_pixi.md  usage.md
src/biautils/: __init__.py
tests/: test.py  test_biautils.py
