[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "biautils"
dynamic = ["version"]
description = "biautils compute environment for computational microscopy at CZBiohub SF"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["microscopy", "biautils"]
authors = [
  { name = "CZ Biohub and iohub contributors", email = "cm-biautils@czbiohub.org" },
]
maintainers = [
  { name = "CZ Biohub and iohub contributors", email = "czbiohub-sf@czbiohub.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "napari[pyqt6]",
  "napari-ome-zarr",
  "napari-animation",
  "ipykernel",
  "napari-iohub",
  "biahub",
  "waveorder[all]==3.0.0a1",
  "viscy>=0.3.2",
  "mip>=1.16rc0",
]

[project.optional-dependencies]
track = [
  "ultrack==0.7.0rc1; sys_platform == 'linux'",
  "biahub[track]",
]
segment = ["biahub[cellpose]"]

[dependency-groups]
doc = [
    "jupyter-book>=2.0.0b2",
]

[project.scripts]
env_version = "biautils:print_environment_info"

[project.urls]
"Homepage" = "https://github.com/czbiohub-sf/compmicro-biautils-env"
"Source" = "https://github.com/czbiohub-sf/compmicro-biautils-env"

[tool.uv.sources]
napari-iohub = { git = "https://github.com/czbiohub-sf/napari-iohub" }
biahub = { git = "https://github.com/czbiohub-sf/biahub" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

