[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "biautils"
dynamic = ["version"]
description = "biautils compute environment for computational microscopy at CZBiohub SF"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["microscopy", "biautils"]
authors = [
  { name = "CZ Biohub and iohub contributors", email = "cm-biautils@czbiohub.org" },
]
maintainers = [
  { name = "CZ Biohub and iohub contributors", email = "czbiohub-sf@czbiohub.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

# No dependencies here - all managed by pixi environments
dependencies = []


# Just 1 dependency group for a lightweight environment to build the docs
[dependency-groups]
doc = ["jupyter-book>=2.0.0b2"]

[project.scripts]
env_info = "biautils:print_environment_info"

[project.urls]
"Homepage" = "https://github.com/czbiohub-sf/compmicro-biautils-env"
"Source" = "https://github.com/czbiohub-sf/compmicro-biautils-env"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
